// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome Render Welcome component with categories empty 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-paddingTop-1hy97zq"
>
  <div
    aria-disabled={true}
    className="css-view-1dbjc4n r-position-u8s1d r-right-r19jdo r-top-1ej1qmr r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
    disabled={true}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <div
      className="css-text-76zvg2 r-color-1dnsj32 r-fontSize-1i10wst r-fontWeight-1kfrs79 r-opacity-17tb59b"
      dir="auto"
    >
      Skip
    </div>
  </div>
  <div
    className="css-text-76zvg2 r-fontSize-adyw6z r-fontWeight-majxgm r-textAlign-q4m81j"
    dir="auto"
  >
    Select 4 or more interests
  </div>
  <div
    className="css-text-76zvg2 r-fontSize-ubezar r-marginTop-1g94qm0 r-textAlign-q4m81j"
    dir="auto"
  >
    Select below to personalize the app with your tastes
  </div>
  <div
    className="css-text-76zvg2 r-color-kaiwep r-fontSize-1i10wst r-fontWeight-1kfrs79 r-marginTop-19h5ruw r-textAlign-q4m81j"
    dir="auto"
  >
    I have a special diet
  </div>
  <div
    className="css-view-1dbjc4n r-backgroundColor-1g6456j r-height-hdaws3 r-marginBottom-117bsoe r-marginLeft-1jj8364 r-marginRight-lchren r-marginTop-1x0uki6 r-width-1glkqn6"
  />
  <div
    className="css-view-1dbjc4n r-marginLeft-1jj8364 r-marginRight-lchren r-maxWidth-z7pwl0"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1h0z5md r-margin-1cis278 r-minHeight-1xfddsp"
      style={
        Object {
          "WebkitBoxFlex": 0,
          "WebkitFlexGrow": 0,
          "flexGrow": 0,
          "msFlexPositive": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Welcome Render Welcome component with data 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-paddingTop-1hy97zq"
>
  <div
    className="css-view-1dbjc4n r-cursor-1loqt21 r-position-u8s1d r-right-r19jdo r-top-1ej1qmr r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
    data-focusable={true}
    disabled={false}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    tabIndex="0"
  >
    <div
      className="css-text-76zvg2 r-color-1dnsj32 r-fontSize-1i10wst r-fontWeight-1kfrs79"
      dir="auto"
    >
      Skip
    </div>
  </div>
  <div
    className="css-text-76zvg2 r-fontSize-adyw6z r-fontWeight-majxgm r-textAlign-q4m81j"
    dir="auto"
  >
    Select 4 or more interests
  </div>
  <div
    className="css-text-76zvg2 r-fontSize-ubezar r-marginTop-1g94qm0 r-textAlign-q4m81j"
    dir="auto"
  >
    Select below to personalize the app with your tastes
  </div>
  <div
    className="css-text-76zvg2 r-color-kaiwep r-fontSize-1i10wst r-fontWeight-1kfrs79 r-marginTop-19h5ruw r-textAlign-q4m81j"
    dir="auto"
  >
    I have a special diet
  </div>
  <div
    className="css-view-1dbjc4n r-backgroundColor-1g6456j r-height-hdaws3 r-marginBottom-117bsoe r-marginLeft-1jj8364 r-marginRight-lchren r-marginTop-1x0uki6 r-width-1glkqn6"
  />
  <div
    className="css-view-1dbjc4n r-marginLeft-1jj8364 r-marginRight-lchren r-maxWidth-z7pwl0"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1h0z5md r-margin-1cis278 r-minHeight-1xfddsp"
      style={
        Object {
          "WebkitBoxFlex": 0,
          "WebkitFlexGrow": 0,
          "flexGrow": 0,
          "msFlexPositive": 0,
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Fish
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Pizza
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Cake
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Deserts
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Salad
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Kids
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Meat
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Easy Lunch
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Welcome Render Welcome component with error 1`] = `
<div
  className="css-text-76zvg2 r-color-1vs7qoz r-fontSize-1i10wst r-fontStyle-36ujnk"
  dir="auto"
>
  Error!
</div>
`;

exports[`Welcome Render Welcome component with loading true 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-drfeu3 r-bottom-1p0dtai r-justifyContent-1777fci r-left-1d2f490 r-position-1xcajam r-right-zchlnj r-top-ipm5af r-zIndex-1sg8ghl"
>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
    role="progressbar"
  >
    <div
      className="css-view-1dbjc4n r-animationDuration-17bb2tj r-animationIterationCount-1muvv40 r-animationKeyframes-127358a r-animationTimingFunction-1ldzwu0 r-height-z80fyv r-width-19wmn03"
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "opacity": 0.2,
              "stroke": "#c5c5c5",
            }
          }
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "stroke": "#c5c5c5",
              "strokeDasharray": 80,
              "strokeDashoffset": 60,
            }
          }
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Welcome Render Welcome component with loading true 2`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-drfeu3 r-bottom-1p0dtai r-justifyContent-1777fci r-left-1d2f490 r-position-1xcajam r-right-zchlnj r-top-ipm5af r-zIndex-1sg8ghl"
>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
    role="progressbar"
  >
    <div
      className="css-view-1dbjc4n r-animationDuration-17bb2tj r-animationIterationCount-1muvv40 r-animationKeyframes-127358a r-animationTimingFunction-1ldzwu0 r-height-1r8g8re r-width-1acpoxo"
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "opacity": 0.2,
              "stroke": "#c5c5c5",
            }
          }
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "stroke": "#c5c5c5",
              "strokeDasharray": 80,
              "strokeDashoffset": 60,
            }
          }
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Welcome Render Welcome component with missingCategory 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-paddingTop-1hy97zq"
>
  <div
    aria-disabled={true}
    className="css-view-1dbjc4n r-position-u8s1d r-right-r19jdo r-top-1ej1qmr r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
    disabled={true}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <div
      className="css-text-76zvg2 r-color-1dnsj32 r-fontSize-1i10wst r-fontWeight-1kfrs79 r-opacity-17tb59b"
      dir="auto"
    >
      Skip
    </div>
  </div>
  <div
    className="css-text-76zvg2 r-fontSize-adyw6z r-fontWeight-majxgm r-textAlign-q4m81j"
    dir="auto"
  >
    Select 4 or more interests
  </div>
  <div
    className="css-text-76zvg2 r-fontSize-ubezar r-marginTop-1g94qm0 r-textAlign-q4m81j"
    dir="auto"
  >
    Select below to personalize the app with your tastes
  </div>
  <div
    className="css-text-76zvg2 r-color-kaiwep r-fontSize-1i10wst r-fontWeight-1kfrs79 r-marginTop-19h5ruw r-textAlign-q4m81j"
    dir="auto"
  >
    I have a special diet
  </div>
  <div
    className="css-view-1dbjc4n r-backgroundColor-1g6456j r-height-hdaws3 r-marginBottom-117bsoe r-marginLeft-1jj8364 r-marginRight-lchren r-marginTop-1x0uki6 r-width-1glkqn6"
  />
  <div
    className="css-view-1dbjc4n r-marginLeft-1jj8364 r-marginRight-lchren r-maxWidth-z7pwl0"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1h0z5md r-margin-1cis278 r-minHeight-1xfddsp"
      style={
        Object {
          "WebkitBoxFlex": 0,
          "WebkitFlexGrow": 0,
          "flexGrow": 0,
          "msFlexPositive": 0,
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Pizza
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Cake
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Deserts
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Salad
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Kids
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Meat
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-76zvg2 r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Easy Lunch
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
